--- a/Mod_3 Solution/index.html
+++ b/Mod_3 Solution/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adare Restaurent</title>
-    <link rel="stylesheet" href="css-reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/css-reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Merriweather:wght@300&display=swap" rel="stylesheet">
 
 </head>
@@ -13,7 +13,7 @@
     <div class="head-container" id="top">
         <header>
             <div class="logo">
-                <img src="images/logo-adare-restaurant.png" alt="Logo of Adare Restaurent">
+                <img src="Images/logo-adare-restaurant.png" alt="Logo of Adare Restaurent">
             </div>
             <nav class="nav-button">
                 <a href="#col1" class="mybutton">Beef</a>
@@ -21,7 +21,7 @@
                 <a href="#col3" class="mybutton">Sushi</a>
             </nav>
             <div class="mob-wrap">
-                <img src="/icon-burger-menu.svg" alt="BurgerMenu" class="burger-menu">
+                <img src="Images/icon-burger-menu.svg" alt="BurgerMenu" class="burger-menu">
                 <div class="mob-nav">
                     <a href="#col1" class="navbutton">Beef</a>
                     <a href="#col2" class="navbutton">Chicken</a>
@@ -58,7 +58,7 @@
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
-    <script src="/javascript.js"></script>
+    <script src="script/javascript.js"></script>
     
 </body>
 </html>
