--- a/Frontend.io/index.html
+++ b/Frontend.io/index.html
@@ -7,7 +7,7 @@
     <title>Social Proof Section</title>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 
 <body>
